--- a/css/style.css
+++ b/css/style.css
@@ -1399,19 +1399,21 @@ input:not(:placeholder-shown)~.reset {
   color: rgb(42, 42, 42);
 }
 
-.brand-filter-container div{
+.brand-filter-container div {
   display: flex;
   gap: 3px;
   align-items: center;
 }
 
-.starfilter-container, .price-filter-container, .brand-filter-container{
+.starfilter-container,
+.price-filter-container,
+.brand-filter-container {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
 
-.custom-price-filter-container{
+.custom-price-filter-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -2911,6 +2913,7 @@ label span.pink {
 
 /* NOTE Product Tabs */
 .product-tabs .nav-tabs {
+  min-height: 50px !important;
   flex-wrap: nowrap !important;
   overflow-x: scroll;
   border-bottom: 1px solid #dee2e6;
@@ -2931,8 +2934,21 @@ label span.pink {
 .product-tabs .nav-link.active {
   color: #000;
   border-bottom: 2px solid #000;
+  animation: navlink-active 400ms ease;
+}
+
+@keyframes navlink-active {
+  0% {
+    color: #666;
+    border-bottom: 1px solid #00000000;
+  }
+
+  100% {
+    color: #000;
+    border-bottom: 2px solid #000;
+  }
 }
 
 .product-tabs .nav-link:hover {
-  color: #000;
+  font-size: 1.0001rem;
 }
